<resources>
    <string name="app_name">MealMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="noAccount">Don\'t Have An Account?</string>
    <string name="signUp">Sign Up!</string>
    <string name="guest">Guest</string>
    <string name="signUpp">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="project_title">MealMe</string>
    <string name="email">Email</string>
    <string name="splash">Splash</string>
    <string name="homePhrase">We\'ve Got Options For You</string>
    <string name="editorsPick">"Editor's Pick For The Day 🖤 "</string>
    <string name="continute_with_google">Continue With Google</string>
    <string name="signOut">Sign Out</string>
    <string name="favourites">Favourites</string>
    <string name="calendar">Calendar</string>
    <string name="the_bear">Yes, Chef!</string>
    <string name="what_you_ll_need">What You\'ll Need:</string>
    <string name="how_to_do_it">How To Do It:</string>
    <string name="do_it_like_a_pro">Do It Like a Pro:</string>
    <string name="week_s_diet">Week\'s Diet:</string>
    <string name="client_id">146068718664-fi1qp6qon7v3vourbip1rtf0cji22lo2.apps.googleusercontent.com</string>
    <string name="no_connection">No Connection</string>
    <string name="mealme_is_offline">MealMe is offline</string>
    <string name="your_picks">Your Picks!</string>
    <string name="search_category">Search Category</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="search_meals">Search Meals</string>
    <string name="username">Username</string>
    <string name="mealme">MealMe</string>
</resources>