<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_theme"
    tools:context=".login.view.LoginFragment">

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="312dp"
        android:layout_height="49dp"
        android:layout_marginTop="81dp"
        android:background="@drawable/img_2"
        android:drawableStart="@drawable/_85078_mail_email_icon"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitleLogin" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/img_2"
        android:drawableStart="@drawable/_830995_padlock_password_secure_security_signin_icon"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="204dp"
        android:layout_height="48dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppinsbold"
        android:inputType="text"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/guestBtn"
        android:layout_width="89dp"
        android:layout_height="33dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppinssemibold"
        android:inputType="text"
        android:text="@string/guest"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/emailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/project_title"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/noAccount"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="64dp"
        android:clickable="true"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/signUp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.096" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="160dp"
        android:layout_height="164dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="153dp"
        android:src="@drawable/taco"
        app:layout_constraintBottom_toTopOf="@+id/emailLogin"
        app:layout_constraintEnd_toStartOf="@+id/appTitleLogin" />

    <View
        android:id="@+id/divider"
        android:layout_width="425dp"
        android:layout_height="1dp"
        android:layout_marginTop="57dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_btn"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="117dp"
        android:background="@drawable/g_btn"
        android:drawableStart="@drawable/icons8_google"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppinssemibold"
        android:gravity="start"
        android:inputType="text"
        android:padding="10dp"
        android:text="@string/continute_with_google"
        android:textColor="#615C5C"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>